--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 }
 
 body {
-    width: 100%;
     color: white;
     background-image: linear-gradient(0deg, rgba(136, 203, 171, 1) 0%, rgba(0, 13, 60, 1) 100%);
     background-repeat: no-repeat;
@@ -16,17 +15,16 @@ body {
 }
 
 .nav {
-    height: 4rem;
     width: 100%;
     background-color: #000;
     top: 0;
-    display: flex;
     font-size: 1.3rem;
     position: fixed;
 }
 
 .nav-list {
     list-style: none;
+    display: flex;
     margin: 0;
     padding: 0;
 }
@@ -40,6 +38,7 @@ body {
 .nav-item:hover {
     color: #000;
     background-color: white;
+    cursor: pointer;
 }
 
 h1 {
@@ -66,13 +65,16 @@ h2 {
 }
 
 .content-list-item-left {
-    padding: 4rem 38rem 6rem 4rem;
+    padding: 4rem;
+    padding-right: 40%;
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
+    text-align: start;
 }
 
 .content-list-item-right {
+    padding: 4rem;
+    padding-left: 40%;
     text-align: end;
-    padding: 4rem 4rem 6rem 38rem;
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
 }
 
@@ -96,4 +98,30 @@ h2 {
     background-color: #000;
     box-sizing: border-box;
     font-size: 1.2rem;
+}
+
+#topButton {
+    display: none;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    cursor: pointer;
+    border-radius: 50%;
+    border: 0;
+    height: 3vw;
+    width: 3vw;
+    font-size: 3vw;
+}
+
+@media only screen and (max-width: 768px) {
+    h1 {
+        font-size: 10vw;
+        margin: 14vh 4vw;
+    }
+    .content-list-item-right {
+        padding: 0;
+    }
+    .content-list-item-left {
+        padding: 0;
+    }
 }
